Fix the spacing on pod leader section (#24)

--- a/_sass/pod_leader.scss
+++ b/_sass/pod_leader.scss
@@ -13,12 +13,14 @@
             font-size:3em;
             color: $var_color;
             margin-bottom:10px;
+            padding: 20px 0px;
         }
         
         p {
             font-family: $font_family;
             font-size:2em;
             color: $wrap_color;
+            padding: 0px 10rem;
         }
 }
 
@@ -31,4 +33,5 @@
     max-width: 100%;
     height: auto;
     border-radius: 50%;
+    padding: 20px 0px;
 }
